--- a/SodaTMallServer/web/WEB-INF/web.xml
+++ b/SodaTMallServer/web/WEB-INF/web.xml
@@ -1,43 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app>
     <servlet>
-        <servlet-name>HelloServlet</servlet-name>
-        <servlet-class>HelloServlet</servlet-class>
+        <servlet-name>learn_servlet.HelloServlet</servlet-name>
+        <servlet-class>learn_servlet.HelloServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>HelloServlet</servlet-name>
+        <servlet-name>learn_servlet.HelloServlet</servlet-name>
         <url-pattern>/hello</url-pattern>
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>LoginServlet</servlet-class>
+        <servlet-name>learn_servlet.LoginServlet</servlet-name>
+        <servlet-class>learn_servlet.LoginServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
+        <servlet-name>learn_servlet.LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>LifecycleServlet</servlet-name>
-        <servlet-class>LifecycleServlet</servlet-class>
+        <servlet-name>learn_servlet.LifecycleServlet</servlet-name>
+        <servlet-class>learn_servlet.LifecycleServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>LifecycleServlet</servlet-name>
+        <servlet-name>learn_servlet.LifecycleServlet</servlet-name>
         <url-pattern>/lifecycle</url-pattern>
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>UploadPhotoServlet</servlet-name>
-        <servlet-class>UploadPhotoServlet</servlet-class>
+        <servlet-name>learn_servlet.UploadPhotoServlet</servlet-name>
+        <servlet-class>learn_servlet.UploadPhotoServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>UploadPhotoServlet</servlet-name>
+        <servlet-name>learn_servlet.UploadPhotoServlet</servlet-name>
         <url-pattern>/uploadPhoto</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>learn_servlet.HeroServlet</servlet-name>
+        <servlet-class>learn_servlet.HeroServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>learn_servlet.HeroServlet</servlet-name>
+        <url-pattern>/hero</url-pattern>
     </servlet-mapping>
 
 </web-app>
