--- a/SodaTMallServer/web/WEB-INF/web.xml
+++ b/SodaTMallServer/web/WEB-INF/web.xml
@@ -90,4 +90,13 @@
         <url-pattern>/editHero</url-pattern>
     </servlet-mapping>
 
+    <filter>
+        <filter-name>TimeFilter</filter-name>
+        <filter-class>learn_servlet.filter.TimeFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>TimeFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
