--- a/SodaTMallServer/web/WEB-INF/web.xml
+++ b/SodaTMallServer/web/WEB-INF/web.xml
@@ -90,4 +90,15 @@
         <url-pattern>/editHero</url-pattern>
     </servlet-mapping>
 
+<!--    filter-->
+    <filter>
+        <filter-name>learn_servlet.filter.FirstFilter</filter-name>
+        <filter-class>learn_servlet.filter.FirstFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>learn_servlet.filter.FirstFilter</filter-name>
+        <url-pattern>*</url-pattern>
+    </filter-mapping>
+
 </web-app>
