--- a/SodaTMallServer/web/WEB-INF/web.xml
+++ b/SodaTMallServer/web/WEB-INF/web.xml
@@ -90,16 +90,7 @@
         <url-pattern>/editHero</url-pattern>
     </servlet-mapping>
 
-    <filter>
-        <filter-name>TimeFilter</filter-name>
-        <filter-class>learn_servlet.filter.TimeFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>TimeFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-
-<!--    filter-->
+    <!--    filter-->
     <filter>
         <filter-name>learn_servlet.filter.FirstFilter</filter-name>
         <filter-class>learn_servlet.filter.FirstFilter</filter-class>
@@ -109,5 +100,16 @@
         <filter-name>learn_servlet.filter.FirstFilter</filter-name>
         <url-pattern>*</url-pattern>
     </filter-mapping>
+
+    <filter>
+        <filter-name>learn_servlet.filter.EncodingFilter</filter-name>
+        <filter-class>learn_servlet.filter.EncodingFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>learn_servlet.filter.EncodingFilter</filter-name>
+        <url-pattern>*</url-pattern>
+    </filter-mapping>
+
 
 </web-app>
