--- a/SodaTMallServer/web/WEB-INF/web.xml
+++ b/SodaTMallServer/web/WEB-INF/web.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app>
+
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
+
     <servlet>
         <servlet-name>learn_servlet.HelloServlet</servlet-name>
         <servlet-class>learn_servlet.HelloServlet</servlet-class>
@@ -111,5 +116,16 @@
         <url-pattern>*</url-pattern>
     </filter-mapping>
 
+    <listener>
+        <listener-class>learn_servlet.listener.ContextListener</listener-class>
+    </listener>
+
+    <listener>
+        <listener-class>learn_servlet.listener.SessionListener</listener-class>
+    </listener>
+
+    <listener>
+        <listener-class>learn_servlet.listener.SessionAttributeListener</listener-class>
+    </listener>
 
 </web-app>
